@@ -1,4 +1,8 @@
-﻿shmuel 15.05.2014 00:13:09 +0200 - build 3902
+﻿drkns 15.05.2014 01:45:08 +0200 - build 3903
+
+1. Уточнение детектирования юникодного текста.
+
+shmuel 15.05.2014 00:13:09 +0200 - build 3902
 
 1. Продолжение 3896.
 
